--- a/main/templates/main/cal.html
+++ b/main/templates/main/cal.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Погода</h1>
-    <p>Ey</p>
+    <h1>Калькулятор</h1>
+    <p>Тык-тык</p>
 {% endblock %}
