--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         {{ form.title }}<br>
         {{ form.task }}<br>
-        <button type="submit" class="btn btn-success">Добавить</button>
+        <button type="submit" class="btn btn-dark">Добавить</button>
         <span>{{ error }}</span>
     </form>
 {% endblock %}
