--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>Главная страница</h1>
-    <p>Супер комплименты Вике</p>
+    <p class="h3 me-3 py-2 text-dark text-decoration-1">Записи</p>
     {% if tasks %}
         {% for el in tasks %}
             <div class="alert alert-warning mt-2">
@@ -15,6 +15,6 @@
             </div>
         {% endfor%}
     {% else %}
-        <p>Нет записей, Лох!</p>
+        <p>Добавь запись, пожалуйста!</p>
     {% endif%}
 {% endblock %}
