--- a/main/templates/main/pol.html
+++ b/main/templates/main/pol.html
@@ -5,6 +5,25 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Погода</h1>
-    <p>Ey</p>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-5 offset-1">
+                <h1>Погода в вашем городе</h1>
+                <form action="">
+                    <label for="city">Город</label>
+                    <input type="text" id="city" class="form-control" name="city" placeholder="Введите город">
+                    <input type="submit"  name="send" value="Узнать" class="mt-2 btn btn-dark">
+                </form>
+
+            </div>
+            <div class="col-4 offset-1">
+                <h1>Информация</h1>
+                <div class="alert alert-dark">
+                    <b>Город:</b>{{info.city}}<br>
+                    <b>Температура:</b>{{info.temp}}<sup>0</sup><br>
+                    <img src="http://openweathermap.org/img/w/{{info.icon}}.png" alt="Фото погоды" class="img-thumbnail">
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
